--- a/SimTECH/SimTECH/Pages/Racing/CommonSession.razor
+++ b/SimTECH/SimTECH/Pages/Racing/CommonSession.razor
@@ -1,6 +1,6 @@
 ﻿<MudTable Items="@Drivers.OrderBy(e => e.Position)" Dense="true" Class="extra-dense" id="session-table">
     <ToolBarContent>
-        <MudStack Row="true" AlignItems="AlignItems.Center">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
             <CountryFlag Code="@raceCountry" />
             <MudText Typo="Typo.h5">@raceTitle</MudText>
             <MudSpacer />
