I might need this

--- a/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
@@ -205,6 +205,7 @@
                     Nationality = e.Driver.Country,
                     Optional = currentYear - e.Driver.DateOfBirth.Year,
                     Old = e.RetrieveAspectValue(selectedAspect),
+                    Mark = e.Driver.Mark
                 })
             .ToList();
 
@@ -221,6 +222,7 @@
                     Nationality = e.Team.Country,
                     Optional = null,
                     Old = e.RetrieveAspectValue(selectedAspect),
+                    Mark = e.Team.Mark
                 })
             .ToList();
 
