--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
@@ -35,5 +35,5 @@
 </MudPaper>
 
 @code {
-    [Parameter] public List<StandingTeamModel> StandingConstructors { get; set; }
+    [Parameter] public IEnumerable<StandingTeamModel> StandingConstructors { get; set; } = Enumerable.Empty<StandingTeamModel>();
 }
