--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
@@ -37,5 +37,5 @@
 </MudPaper>
 
 @code {
-    [Parameter] public List<StandingDriverModel> StandingDrivers { get; set; }
+    [Parameter] public IEnumerable<StandingDriverModel> StandingDrivers { get; set; } = Enumerable.Empty<StandingDriverModel>();
 }
