--- a/SimTECH/SimTECH/Pages/Season/Development/DevelopEntrant.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/DevelopEntrant.razor
@@ -57,7 +57,9 @@
     <RowTemplate>
         <MudTd>
             <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
-                <MudText Class="overflow-hider">@context.Name</MudText>
+                <MudText Class="overflow-hider" Style="@(context.Mark ? "text-decoration: underline" : "")">
+                    @context.Name
+                </MudText>
                 <MudSpacer />
                 @if (context.Nationality.HasValue)
                 {
